# reqwest4j

./: .gitignore  LICENSE  README.md  build.gradle  renovate.json  settings.gradle
.github/workflows/: build-maven.yml  ci.yml  publish-maven.yml
reqwest-jni/: Cargo.toml  build.gradle.kts
reqwest-jni/src/: lib.rs
src/main/java/rocks/kavin/reqwest4j/: ReqwestUtils.java  Response.java
