[package]
name = "reqwest-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
reqwest = {version = "0.11.25", features = ["rustls-tls", "stream", "brotli", "gzip", "socks"], default-features = false}
tokio = {version = "1.36.0", features = ["rt-multi-thread", "time"], default-features = false}

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
